<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >


        <TextView
            android:id="@+id/title_book"
            android:text="@string/book_title"
            android:textSize="50sp"
            android:layout_above="@+id/author_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/author_book"
            android:text="@string/book_author"
            android:textSize="40sp"
            android:layout_below="@+id/title_book"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
           android:id="@+id/book_image"
           android:layout_height="250dp"
           android:layout_width="match_parent"
           android:src="@drawable/ic_launcher"

            />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_description"/>


    </LinearLayout>

</ScrollView>
